# qdi-demo

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json  start.sh
.github/workflows/: test.yml
qdi-core/: CMakeLists.txt
qdi-core/include/: qdi.h
qdi-core/python/: index.html  mock_device_config.json  mock_device_library.json  qdi_demo_server.py  qdi_python.py  test_fastapi_qdi.py  test_qdi.py
qdi-core/src/: qdi_compat_qdmi.cpp  qdi_mock.cpp
scripts/: bootstrap  start
tests/: test_api.py  test_http_client.py
